# jeff-mitchell-dev-v0

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  justfile
assets/: screen.css  scripts.js
content/2022/: 2022_04_05_let_the_journey_begin.md  2022_04_09_constants.md  2022_04_12_pouring_the_footings.md  2022_04_14_pouring_the_footings_single.md  2022_04_18_pouring_the_footings_compound.md  2022_04_22_lets_get_functional.md  2022_04_27_decisions_decisions.md  2022_05_01_controlling_the_flow.md  2022_05_06_building_something_saying_hello.md  2022_05_11_bigger_building_blocks_intro_to_structs.md  2022_05_21_bigger_building_blocks_intro_to_enumerations.md  2022_06_11_bigger_building_blocks_structs_reloaded.md  2022_07_01_method_to_the_madness.md  2022_07_14_the_memory_doesnt_remain.md  2022_08_13_option_is_it_something_or_nothing.md  2022_09_30_matchy_matchy.md  2022_11_14_the_dumbest_program_ever.md  2022_11_18_deployment_is_a_dirty_word.md
content/2023/: 2023_07_31_packages_crates_modules.md  2023_10_15_demystifying_actix_web_middleware.md  2023_10_19_spotlight_on_yew.md  2023_11_26_spotlight_on_actix_web.md  2023_11_26_the_mighty_vector.md  2023_12_26_serving_the_web_with_rust.md
content/2024/: 2024_01_14_serve_the_web_with_rust_reloaded.md  2024_01_21_how_I_learned_to_love_tailwind.md  2024_02_03_bare_bones_actix_web_starter.md  (+3 more)
migrations/: 20240331195133_articles.down.sql  20240331195133_articles.up.sql
templates/: 404.html  about.html  article.html  articles.html  base.html  games.html  index.html  music.html  photography.html  projects.html
(+29 files in other folders)
