[package]
name = "jeff-mitchell-dev"
version = "2024.6.13"
edition = "2021"
description = "My dev profile site"
readme = "README.md"
authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>"]
repository = "https://github.com/sentinel1909/jeff-mitchell-dev"
license = 'MIT'

[[bin]]
name = "jeff-mitchell-dev"
path = "src/bin/httpd.rs"

[lib]
name = "jeff_mitchell_dev"
path = "src/lib/lib.rs"

[dependencies]
askama = { version = "0.12.1", default-features = false, features = [ "with-axum" ] }
axum = "0.7.7"
askama_axum = "0.4.0"
axum-macros = "0.4.2"
chrono = "0.4.38"
gray_matter = "0.2.8"
pulldown-cmark = "0.12.1"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
shuttle-axum = "0.48.0"
shuttle-runtime = { version = "0.48.0", default-features = false }
shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx"]}
sqlx = "0.8.2"
thiserror = "1.0.64"
tokio = "1.40.0"
tower = { version = "0.5.1", features = [ "full"] }
tower-http = { version = "0.6.1", features = ["cors", "fs", "normalize-path", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
